# chat_online

./: README.md  pyproject.toml
realmate_challenge/: __daphne__.py  asgi.py  settings.py  urls.py
realmate_challenge/apps/conversation/: admin.py  apps.py  models.py  serializers.py  views.py
realmate_challenge/apps/conversation/management/commands/: populate_gym_conversations.py
realmate_challenge/apps/conversation/migrations/: 0001_initial.py  0002_alter_conversation_options_remove_conversation_name_and_more.py
realmate_challenge/apps/message/: admin.py  apps.py  models.py  serializers.py  views.py
realmate_challenge/apps/message/migrations/: 0001_initial.py  0002_alter_message_options_alter_message_conversation_and_more.py
realmate_challenge/apps/websocket/: consumers.py  routing.py
realmate_challenge/templates/realmate_challenge/: chat.html  conversation_detail.html  conversations.html
realmate_challenge/webhooks/messages/: views.py
